--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tarant-react",
-  "version": "2.0.1",
+  "version": "0.1.0",
   "description": "react renderer materializer for the tarant framework",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -37,7 +37,6 @@
     "@types/faker": "6.6.9",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.3",
-    "@types/vue": "2.0.0",
     "@typescript-eslint/eslint-plugin": "5.55.0",
     "@typescript-eslint/parser": "5.55.0",
     "coveralls": "3.1.1",
@@ -53,8 +52,9 @@
     "typescript": "^5.0.2"
   },
   "dependencies": {
-    "tarant": "3.1.37",
-    "vue": "3.2.47"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tarant": "3.1.37"
   },
   "jest": {
     "preset": "ts-jest"
