--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,13 +15,13 @@ jobs:
         id: cache
         with:
           path: node_modules
-          key: ${{ runner.os }}-cache-${{ hashFiles('yarn.lock') }}
+          key: ${{ runner.os }}-cache-${{ hashFiles('package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-cache-
       - name: install dependencies
-        run: yarn install
+        run: npm install
       - name: test
-        run: yarn test:cov
+        run: npm test:cov
       - uses: mikeal/merge-release@master
         if: github.event_name != 'pull_request'
         env:
