fix(tools): fix pipeline

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       - name: install dependencies
         run: npm install
       - name: test
-        run: npm test:cov
+        run: npm run test:cov
       - uses: mikeal/merge-release@master
         if: github.event_name != 'pull_request'
         env:
