--- a/package.json
+++ b/package.json
@@ -66,7 +66,10 @@
     "tarant": "3.x"
   },
   "jest": {
-    "preset": "ts-jest"
+    "preset": "ts-jest",
+    "collectCoverageFrom": [
+    "lib/**/*.{ts,tsx}"
+  ]
   },
   "config": {
     "commitizen": {
