--- a/package.json
+++ b/package.json
@@ -36,16 +36,16 @@
   },
   "devDependencies": {
     "@faker-js/faker": "7.6.0",
-    "@parcel/packager-ts": "^2.8.3",
-    "@parcel/transformer-typescript-types": "^2.8.3",
+    "@parcel/packager-ts": "2.8.3",
+    "@parcel/transformer-typescript-types": "2.8.3",
     "@types/faker": "6.6.9",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.3",
     "@typescript-eslint/eslint-plugin": "5.55.0",
     "@typescript-eslint/parser": "5.55.0",
-    "commitizen": "^4.2.5",
+    "commitizen": "4.2.5",
     "cz-conventional-changelog": "3.3.0",
-    "cz-format-extension": "^1.5.1",
+    "cz-format-extension": "1.5.1",
     "eslint": "8.36.0",
     "eslint-config-standard": "17.0.0",
     "eslint-plugin-import": "2.27.5",
@@ -53,8 +53,8 @@
     "eslint-plugin-promise": "6.1.1",
     "husky": "8.0.1",
     "jest": "29.5.0",
-    "lint-staged": "^13.2.0",
-    "parcel": "^2.8.3",
+    "lint-staged": "13.2.0",
+    "parcel": "2.8.3",
     "prettier": "2.8.4",
     "ts-jest": "29.0.5",
     "typescript": "5.0.2"
